add Font Awesome

--- a/frontend/my-eth-app/packages/react-app/public/index.html
+++ b/frontend/my-eth-app/packages/react-app/public/index.html
@@ -9,7 +9,14 @@
       name="description"
       content="Web site created using create-eth-app"
     />
+    <!--
+      Bulma CSS Framework Stylesheet
+     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
+    <!-- 
+      Font Awesome Icons Stylesheet
+    -->
+    <script src="https://kit.fontawesome.com/5cabc615d9.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
