--- a/frontend/my-eth-app/packages/react-app/public/index.html
+++ b/frontend/my-eth-app/packages/react-app/public/index.html
@@ -11,7 +11,7 @@
   <!--
       Bulma CSS Framework Stylesheet
      -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
   <!-- 
       Font Awesome Icons Stylesheet
     -->
